--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,9 +76,9 @@ jobs:
     - name: Tests
       run: pytest adopet --junitxml=test-result.xml
 
-    - name: publish junit results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
-      with:
-        junit_files: test-result.xml
-        check_name: Test Result (Python ${{matrix.python-version}})
+    # - name: publish junit results
+    #   uses: EnricoMi/publish-unit-test-result-action@v2
+    #   if: always()
+    #   with:
+    #     files: test-result.xml
+    #     check_name: Test Result (Python ${{matrix.python-version}})
