--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -13,6 +13,7 @@ services:
       - .env
     environment:
       - DATABASE_URL=postgres://adopet_user:123456@database:5432/adopet_user
+      - PYTHONBREAKPOINT=ipdb.set_trace
     ports:
       - 8000:8000
     depends_on:
