--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -74,7 +74,7 @@ jobs:
       run: cp .env-sample .env
 
     - name: Tests
-      run: pytest adopet --junitxml=test-result.xml
+      run: pytest -n 2 adopet --junitxml=test-result.xml
 
     # - name: publish junit results
     #   uses: EnricoMi/publish-unit-test-result-action@v2
