--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -9,6 +9,9 @@ WORKDIR $USER_DIR
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Create the app user
+RUN groupadd app && useradd -g app app
+
 #
 RUN apt-get update && apt-get install -y\
     gcc\
@@ -25,6 +28,9 @@ RUN set -ex && \
     pip cache purge
 
 COPY . .
+
+RUN chown -R app:app $USER_DIR
+USER app
 
 EXPOSE 8000
 
