--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -74,7 +74,10 @@ jobs:
       run: cp .env-sample .env
 
     - name: Tests
-      run: pytest -n 2 adopet --junitxml=test-result.xml
+      run: pytest -n 2 adopet --junitxml=test-result.xml --cov=adopet --cov-report=xml
+
+    - name: Upload coverage reports to Codecov with GitHub Action
+      uses: codecov/codecov-action@v3
 
     # - name: publish junit results
     #   uses: EnricoMi/publish-unit-test-result-action@v2
