--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,14 @@ django==4.1.7 \
     # via
     #   -r requirements.in
     #   dj-database-url
+    #   django-cors-headers
     #   django-extensions
     #   djangorestframework
     #   drf-spectacular
+django-cors-headers==3.14.0 \
+    --hash=sha256:5fbd58a6fb4119d975754b2bc090f35ec160a8373f276612c675b00e8a138739 \
+    --hash=sha256:684180013cc7277bdd8702b80a3c5a4b3fcae4abb2bf134dceb9f5dfe300228e
+    # via -r requirements.in
 django-extensions==3.2.1 \
     --hash=sha256:2a4f4d757be2563cd1ff7cfdf2e57468f5f931cc88b23cf82ca75717aae504a4 \
     --hash=sha256:421464be390289513f86cb5e18eb43e5dc1de8b4c27ba9faa3b91261b0d67e09
